Version 0.0.2 (not yet released):
- CVL: Always use 32bit for pixels.
- CVL: Replaced cvl_vector*_t types with simple pointers.
- CVL: Changed cvl_field_get*() functions. Added cvl_field_ref*() functions.
- CVL: cvl_io_read_pnm(), cvl_io_write_pnm(), cvl_io_load_pnm(),
       cvl_io_save_pnm()
  Reworked i/o functions to load/save and read/write pnm files.  
- CVL: cvl_dibr()
  cvtool: dibr
  Prevent integer overflow in (width * 2) when creating stereo frames.

Version 0.0.1:
- initial public release