@@ -57,8 +57,14 @@ gl_INIT
 dnl notgnulib
 ngl_INIT
 
+dnl pkg-config
+PKG_PROG_PKG_CONFIG
+
 dnl GNU Scientific Library
 AM_PATH_GSL([1.6.0], [], [AC_MSG_ERROR(could not find required version of GSL)])
+
+dnl CAIRO
+PKG_CHECK_MODULES(CAIRO, cairo >= 1.0.2, [], [AC_MSG_ERROR(could not find required version of CAIRO)])
 
 dnl Global #defines for all source files
 AH_VERBATIM([UNUSED],
@@ -75,8 +81,8 @@ AH_VERBATIM([UNUSED],
 # define UNUSED __attribute__ ((__unused__))
 #endif])
 
-CVL_LIBS="-L${libdir} -lcvl $GSL_LIBS $LIBS"
-CVL_CFLAGS="-I${includedir} $GSL_CFLAGS"
+CVL_LIBS="-L${libdir} -lcvl $GSL_LIBS $CAIRO_LIBS $LIBS"
+CVL_CFLAGS="-I${includedir} $GSL_CFLAGS $CAIRO_CFLAGS"
 AC_SUBST(CVL_LIBS)
 AC_SUBST(CVL_CFLAGS)
 
