@@ -1,9 +1,9 @@
 /*
- * cvl.c
+ * cvl_cairo.h
  * 
  * This file is part of CVL, a computer vision library.
  *
- * Copyright (C) 2005, 2006  Martin Lambers <marlam@marlam.de>
+ * Copyright (C) 2006  Martin Lambers <marlam@marlam.de>
  *
  *   This program is free software; you can redistribute it and/or modify
  *   it under the terms of the GNU General Public License as published by
@@ -20,21 +20,18 @@
  *   Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
-#include "cvl_msg.c"
-#include "cvl_math.c"
-#include "cvl_pixel.c"
-#include "cvl_vector.c"
-#include "cvl_field.c"
-#include "cvl_frame.c"
-#include "cvl_io.c"
-#include "cvl_color.c"
-#include "cvl_cairo.c"
-#include "cvl_convolve.c"
-#include "cvl_smooth.c"
-#include "cvl_edge.c"
-#include "cvl_transform.c"
-#include "cvl_draw.c"
-#include "cvl_blend.c"
-#include "cvl_misc.c"
-#include "cvl_stereo.c"
-#include "cvl_opticalflow.c"
+#ifndef CVL_CAIRO_H
+#define CVL_CAIRO_H
+
+#include <cairo.h>
+
+#include "cvl_frame.h"
+#include "cvl_color.h"
+
+void cvl_cairo_start(cvl_frame_t *frame, cairo_surface_t **surface, cairo_t **cr,
+	cvl_pixel_type_t *original_pixel_type);
+void cvl_cairo_stop(cvl_frame_t *frame, cairo_surface_t *surface, cairo_t *cr,
+	cvl_pixel_type_t original_pixel_type);
+inline void cvl_draw_set_cairo_color(cairo_t *cr, cvl_color_t color);
+
+#endif
