@@ -1,4 +1,5 @@
 Version 0.0.2 (not yet released):
+- CVL: Add interface to the CAIRO graphics library.
 - CVL: Always use 32bit for pixels.
 - CVL: Replaced cvl_vector*_t types with simple pointers.
 - CVL: Changed cvl_field_get*() functions. Added cvl_field_ref*() functions.
